--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,1 +1,5 @@
-<p>search-bar works!</p>
+<div>
+    <input type="text" [(ngModel)]="city" placeholder="Enter city name">
+    <button (click)="search()">Search</button>
+  </div>
+  
