--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div>
   <app-search-bar (searchCity)="getWeather($event)"></app-search-bar>
   <app-weather-display [weatherData]="weather"></app-weather-display>
-</div> -->
+</div>
