--- a/src/app/weather-display/weather-display.component.html
+++ b/src/app/weather-display/weather-display.component.html
@@ -1,3 +1,5 @@
+<h1>hello</h1>
+
 <div *ngIf="weatherData">
     <h2>{{ weatherData.name }} Weather</h2>
     <p>Temperature: {{ weatherData.main.temp }}°C</p>
