--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="input-section">
-    <input type="text" [(ngModel)]="city" placeholder="Enter Country Name">
+    <input type="text" [(ngModel)]="city" placeholder="Enter City Name">
     <button (click)="search()">Search</button>
   </div>
   
