--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -5,11 +5,18 @@
 input {
     width :50vh;
     border: none;
-    border-bottom: solid red;
+    border-bottom: solid red 1px;
     background: none;
     color: white;
     font-size: 1.5em;
+    transition: 0.3s;
 }
+
+input:focus {
+    border-bottom: solid red 2px;
+    outline: none;
+  }
+
 
 button {
     padding: 10px;
