--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <div class="input-section">
+    <h1>Clur Weather app</h1>
     <input type="text" [(ngModel)]="city" placeholder="Enter City Name">
     <button (click)="search()">Search</button>
   </div>
