--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 body {
     display: flex;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(rgb(49, 0, 49), rgb(207, 71, 114));
+   background-image: url(img/wall.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
